Fix some small alignment issues on the meetings list page:
- The 'Meetings' heading wasn't aligned with the table.
- The recent/upcoming meetings panels weren't aligned with the
table.

--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -39,6 +39,10 @@
     margin-bottom: 0 !important;
 }
 
+.padding-left-none {
+    padding-left: 0 !important;
+}
+
 .padding-right-none {
     padding-right: 0 !important;
 }
